<resources>
    <!--app-->
    <string name="app_name">Emploi du temps</string>

    <!--layout main-->
    <string name="action_exit">Quitter</string>
    <string name="action_refresh">Refraîchir</string>

    <string name="tv_diver">DIVER</string>
    <string name="tv_set">SET</string>

    <string name="pas_de_cour">Pas De Cour !</string>

    <string name="periode1">08:00\n1</string>
    <string name="periode2">09:00\n2</string>
    <string name="periode3">10:15\n3</string>
    <string name="periode4">11:15\n4</string>
    <string name="periode5">13:45\n5</string>
    <string name="periode6">14:45\n6</string>
    <string name="periode7">16:00\n7</string>
    <string name="periode8">17:00\n8</string>
    <string name="periode9">18:15\n9</string>
    <string name="periode10">19:15\n10</string>
    <string name="periode11">20:30\n11</string>
    <string name="periode12">21:30\n12</string>
    <string name="periode13">22:30\n13</string>

    <string name="date_annee">2016</string>
    <string name="date_lundi">lund\n01/11</string>
    <string name="date_mardi">mardi\n02/11</string>
    <string name="date_mercredi">mercredi\n03/11 </string>
    <string name="date_jeudi">jeudi\n04/11 </string>
    <string name="date_vendredi">vendredi\n05/11 </string>

    <!--layout set-->
    <string name="title_info">Mes infos</string>
    <string name="choix_annee">Année</string>
    <string name="choix_groupe">Groupe</string>
    <string name="choix_option">Option</string>
    <string name="choix_groupeRSE">GroupeRSE</string>
    <string name="confirmer">Confirmer</string>
    <string name="tv_annuler">Annuler</string>

    <!--layout diver-->
    <string name="title_diver">Diver</string>
    <string name="back_to_main">Back</string>
    <string name="mode_detail">Mode Detaillée</string>
    <string name="version">Version</string>
    <string name="about">About</string>

    <!--layout welcome-->
    <string name="btn_welcome_set">Set</string>
    <string name="btn_welcome_voir">Voir</string>

</resources>
