<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_annee"
        style="@style/style_text_annee"
        android:text="@string/date_annee" />

    <TextView
        android:id="@+id/tv_lundi"
        style="@style/style_text_date"
        android:text="@string/date_lundi" />

    <TextView
        android:id="@+id/tv_mardi"
        style="@style/style_text_date"
        android:text="@string/date_mardi" />

    <TextView
        android:id="@+id/tv_mercredi"
        style="@style/style_text_date"
        android:text="@string/date_mercredi" />

    <TextView
        android:id="@+id/tv_jeudi"
        style="@style/style_text_date"
        android:text="@string/date_jeudi" />

    <TextView
        android:id="@+id/tv_vendredi"
        style="@style/style_text_date"
        android:text="@string/date_vendredi" />
</LinearLayout>